base/defaultservice/namespace.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: defaultservice
  labels:
    istio-injection: enabled
