base/defaultservice/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defaultservice
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: defaultservice
  template:
    metadata:
      labels:
        app.kubernetes.io/name: defaultservice
    spec:
      serviceAccountName: defaultservice
      containers:
        - image: docker.io/seankhliao/defaultservice
          name: defaultservice
          ports:
            - containerPort: 8080
