base/defaultservice/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: defaultservice
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: defaultservice
