base/defaultservice/virtualservice.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: defaultservice
spec:
  hosts:
    - medea.seankhliao.com
    - k.seankhliao.com
  gateways:
    - defaultservice
    - mesh
  http:
    - match:
        - authority:
            exact: medea.seankhliao.com
      route:
        - destination:
            host: defaultservice.defaultservice.svc.cluster.local
            port:
              number: 80
    - match:
        - authority:
            exact: k.seankhliao.com
      redirect:
        authority: medea.seankhliao.com
        redirectCode: 302
